--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Main Page</title>
         <meta charset="utf-8"/>
+        <link rel="stylesheet" type="text/css" href="style.css"/>
     </head>
     <body>
         <nav id="nav-bar">
