--- a/ireland.html
+++ b/ireland.html
@@ -26,7 +26,7 @@
         <h1>Family Vacation</h1>
         <p>**NOTE: I can't fix the weird positioning on the images on desktop. It works fine on mobile though.**</p>
         <p>My family and I went to Ireland in November of 2017 to visit with my dad's side of the family and tour the country.</p>
-        <img src="images/family-photo.JPG" alt="images/cliffs-siblings.JPG">
+        <img src="images/family-photo.JPG" class="rotate180" alt="images/cliffs-siblings.JPG">
         <img src="images/cliffs-siblings.JPG" alt="images/family-photo.JPG">
         <p>Driving is swapped in Ireland so I was super disoriented when we got into the car.</p>
         <img src="images/car.JPG" alt="images/car.JPG">
