added more style

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
         <p>I am a Sophomore ITM Student at IIT in Chicago, IL.</p>
         <p>I'm a big Nintendo nerd and I like to make YouTube videos.</p>
         <p>I know how to make some bomb mac &amp; cheese.</p>
-        <p>C H I C K E N T E N D E R S</p>
+        <p><strong>CHICKEN</strong><em>T E N D E R S</em></p>
         <img src="images/chicken-tenders.jpg" alt="images/extra-crispy-mmm.jpg">
-        <p>I paid an animator on twitter to make me a gif.</p>
+        <p>I paid an animator on twitter to make a gif of me tossing a pokémon.</p>
         <img src="images/pokeball_gif.GIF" alt="images/grookey-and-me.jpg">
         <hr>
         <h2>Music</h2>
         <h3>Genre</h3>
         <ul>
             <li>Electronic Dance Music (EDM)</li>
-            <li>80's-Current Music </li>
+            <li>80's Pop</li>
             <li>Musical Soundtracks</li>
         </ul>
         <h3>Artists/Bands</h3>
@@ -46,6 +46,8 @@
         <iframe src="https://www.youtube.com/embed/H_43iTqCLMI" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p>Favorite NSP Song & Music Video (featuring Finn Wolfhard from Stranger Things):</p>
         <iframe src="https://www.youtube.com/embed/kT8cX2-_7pQ" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>Favorite Tokyo Machine Song:</p>
+        <iframe src="https://www.youtube.com/embed/NgPWqeirmrM" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <hr>
         <h2>Favorite TV Shows</h2>
         <ul>
