--- a/ireland.html
+++ b/ireland.html
@@ -24,12 +24,11 @@
         <p>There is plenty to do and see such as visiting the museum and learning about the history of the Cliffs, taking a walk to O'Brien's Tower, &amp; taking pictures with your friends and family with the Cliffs in the background.</p>
         <hr>
         <h1>Family Vacation</h1>
-        <p>**NOTE: I can't fix the weird positioning on the images on desktop. It works fine on mobile though.**</p>
         <p>My family and I went to Ireland in November of 2017 to visit with my dad's side of the family and tour the country.</p>
         <img src="images/family-photo.JPG" class="rotate180" alt="images/cliffs-siblings.JPG">
         <img src="images/cliffs-siblings.JPG" alt="images/family-photo.JPG">
         <p>Driving is swapped in Ireland so I was super disoriented when we got into the car.</p>
-        <img src="images/car.JPG" alt="images/car.JPG">
+        <img src="images/car.JPG" class="rotate90" alt="images/car.JPG">
         <hr>
         <h1>Music</h1>
         <p>Most Irish music tells a story or is really fun to listen to.</p>
