fixed more style and added more info to vacation

--- a/ireland.html
+++ b/ireland.html
@@ -25,10 +25,12 @@
         <hr>
         <h1>Family Vacation</h1>
         <p>My family and I went to Ireland in November of 2017 to visit with my dad's side of the family and tour the country.</p>
-        <img src="images/family-photo.JPG" class="rotate180" alt="images/cliffs-siblings.JPG">
+        <p>The first picture is my two older sisters and me in front of the Cliffs of Moher. It was raining that day, but it looks like a really nice day.</p>
+        <p>In Ireland, the driver's side of the car is on the right side of the car and they drive on the left side of the road, so I was super disoriented when we got in the car.</p>
+        <p>And the last picture is of my family and me before we went to a castle that I don't remember the name of.</p>
         <img src="images/cliffs-siblings.JPG" alt="images/family-photo.JPG">
-        <p>Driving is swapped in Ireland so I was super disoriented when we got into the car.</p>
         <img src="images/car.JPG" class="rotate90" alt="images/car.JPG">
+        <img src="images/family-photo.JPG" class="rotate180" alt="images/cliffs-siblings.JPG">
         <hr>
         <h1>Music</h1>
         <p>Most Irish music tells a story or is really fun to listen to.</p>
