--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p>I know how to make some bomb mac &amp; cheese.</p>
         <p><strong>CHICKEN</strong><em>T E N D E R S</em></p>
         <img src="images/chicken-tenders.jpg" alt="images/extra-crispy-mmm.jpg">
-        <p>I paid an animator on twitter to make a gif of me tossing a pokémon.</p>
+        <p>I paid an animator on twitter to make a gif of me tossing a pokéball up and down.</p>
         <img src="images/pokeball_gif.GIF" alt="images/grookey-and-me.jpg">
         <hr>
         <h2>Music</h2>
@@ -60,6 +60,8 @@
             <li>Phineas and Ferb</li>
             <li>Spongebob (the older episodes though)</li>
         </ul>
+        <p>Here's a video of every customer interstitial in the show "Superstore":</p>
+        <iframe src="https://www.youtube.com/embed/xIPPTsON-n8" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <hr>
         <h2>GameGrumps</h2>
         <p>Hands down my favorite YouTubers ever. I saw them live this past June and they are also the members of Starbomb &amp; NSP.</p>
