--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
        <h3>Experience</h3>
        <p>Package Room Employee - Coast at Lakeshore East <em>December 2018 - Present</em></p>
        <ul>
-           <li>Customer Service</li>
+           <li>Excellent Customer Service</li>
            <li>Experience with Windows 7</li>
            <li>Organizational Skills</li>
        </ul>
