--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </nav>
         <hr>
         <h1>About Me</h1>
-        <p>>Name: Thomas Carmody</p>
+        <p>Name: Thomas Carmody</p>
         <p>Date of Birth: April 9th, 2000 (Age 19)</p>
         <p>Place of Birth: Palos Park, IL</p>
         <p>I am a Sophomore ITM Student at IIT in Chicago, IL.</p>
@@ -61,7 +61,7 @@
             <li>Spongebob (the older episodes though)</li>
         </ul>
         <p>Here's a video of every customer interstitial in the show "Superstore":</p>
-        <iframe src="https://www.youtube.com/embed/xIPPTsON-n8" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="540" height="315" src="https://www.youtube.com/embed/xIPPTsON-n8" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <hr>
         <h2>GameGrumps</h2>
         <p>Hands down my favorite YouTubers ever. I saw them live this past June and they are also the members of Starbomb &amp; NSP.</p>
