minor changed made to index and ireland

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <li>Spongebob (the older episodes though)</li>
         </ul>
         <p>Here's a video of every customer interstitial in the show "Superstore":</p>
-        <iframe width="540" height="315" src="https://www.youtube.com/embed/xIPPTsON-n8" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/xIPPTsON-n8" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <hr>
         <h2>GameGrumps</h2>
         <p>Hands down my favorite YouTubers ever. I saw them live this past June and they are also the members of Starbomb &amp; NSP.</p>
