--- a/ireland.html
+++ b/ireland.html
@@ -18,7 +18,7 @@
         <p>He met my mom after he came to America which makes me 1st Generation Irish-American.</p>
         <hr>
         <h1>The Cliffs of Moher</h1>
-        <h3>(pronounced "Mah-Her")</h3>
+        <h3>(pronounced "Maw-Her")</h3>
         <img src="images/cliffs-moher.jpg" alt="images/cliffs-moher2.jpg">
         <p>Located in County Clare, Ireland, the Cliffs of Moher is a very popular tourist destination.</p>
         <p>There is plenty to do and see such as visiting the museum and learning about the history of the Cliffs, taking a walk to O'Brien's Tower, &amp; taking pictures with your friends and family with the Cliffs in the background.</p>
